--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ locale                   : "en-US"
 title                    : "Arthur Liang"
 title_separator          : "-"
 name                     : &name "Arthur Liang"
-description              : &description "personal description"
-url                      : "https://aliang9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "ml researcher interested in medicine and neuroscience"
+url                      : https://aliang9.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "aliang9/aliang9.github.io"
 
@@ -25,7 +25,7 @@ author:
   name             : "Arthur Liang"
   pronouns         : # example: "she/her"  
   bio              : "ml researcher interested in medicine and neuroscience"
-  location         : "Cambridge, MA & Brooklyn, NY"
+  location         : "cambridge, ma & brooklyn, ny"
   employer         : "neuro, cs, and math student"
   uri              : # URL
   email            : "artliang at mit dot edu" 
