--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "cambridge, ma & brooklyn, ny"
   employer         : "neuro, cs, and math student"
   uri              : # URL
-  email            : "artliang at mit dot edu" 
+  email            : "artliang@mit.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
