--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "ml researcher interested in medicine and neuroscience"
   location         : "cambridge, ma & brooklyn, ny"
-  employer         : "neuro, cs, and math student"
+  employer         : # URL
   uri              : # URL
   email            : "artliang@mit.edu" 
 
