--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,11 +15,11 @@ main:
   - title: "Blog"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
-
   # - title: "CV"
-  #   url: https://aliang9.github.io/files/
+  #   url: /cv/
+
+  - title: "CV"
+    url: https://aliang9.github.io/files/Liang_Arthur_CV_2024 (4).pdf
     
   # - title: "Guide"
   #   url: /markdown/
