--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "aliang9/aliang9.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IMG_3106 (2).jpg"
   name             : "Arthur Liang"
   pronouns         : # example: "she/her"  
   bio              : "ml researcher interested in medicine and neuroscience"
