--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
   #   url: /cv/
 
   - title: "CV"
-    url: https://aliang9.github.io/files/Liang_Arthur_CV_2024 (4).pdf
+    url: https://aliang9.github.io/files/Liang_Arthur_CV_2024.pdf
     
   # - title: "Guide"
   #   url: /markdown/
