--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   # - title: "CV"
   #   url: /cv/
 
-  - title: "CV"
-    url: https://aliang9.github.io/files/Liang_Arthur_CV_2024.pdf
+  - title: "Resume"
+    url: https://aliang9.github.io/files/Liang_Arthur_Resume_2025.pdf
     
   # - title: "Guide"
   #   url: /markdown/
