publications and reading list

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  # - title: "Publications"
-  #   url: /publications/
+  - title: "publications"
+    url: /publications/
 
   # - title: "Talks"
   #   url: /talks/    
@@ -12,13 +12,16 @@ main:
   # - title: "Portfolio"
     # url: /portfolio/
         
-  - title: "Blog"
+  - title: "blog"
     url: /year-archive/
     
   # - title: "CV"
   #   url: /cv/
 
-  - title: "Resume"
+  - title: "reading"
+    url: /reading/
+
+  - title: "resume"
     url: https://aliang9.github.io/files/Liang_Arthur_Resume_2025.pdf
     
   # - title: "Guide"
